hphp/hack/test/typecheck/references/refs_in_array/intrinsic.php.exp
File "intrinsic.php", line 5, characters 13-13:
An expression is expected here. (Parsing[1002])
