hphp/hack/test/typecheck/references/refs_in_array/intrinsic.php
<?hh // strict

function test(): void {
  $y = 42;
  array(1, &$y);
}
